--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
   outline: 0;
   border-top: 0px;
   border-right: 0px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(121, 121, 121);
   border-left: 0px;
 }
 
